--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_adaptive_scaffold: ^0.1.5
+  go_router: ^9.0.0
 
 dev_dependencies:
   flutter_test:
